<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_book_register">

    <ImageView
        android:id="@+id/book_register_image"
        android:layout_width="@dimen/imageSize"
        android:layout_height="@dimen/imageSize"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        app:srcCompat="@android:drawable/ic_menu_camera"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_register_image"
        android:text="@string/book_register_title"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/book_register_title_example"
        android:inputType="textCapSentences"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_title"
        android:text="@string/book_register_pages"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/book_pages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/book_register_pages_example"
        android:inputType="number"/>

    <Button
        android:id="@+id/book_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_pages"
        android:background="@color/colorPrimaryDark"
        android:text="@string/action_save"
        android:textColor="@color/white"
        android:textStyle="normal|bold"/>
</RelativeLayout>
