<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mateus.jera.reminder_book.BookReminderActivity"
    tools:showIn="@layout/activity_book_reminder">

    <include
        android:id="@+id/book_reminder_option_date"
        layout="@layout/content_book_reminder_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <include
        android:id="@+id/book_reminder_option_time"
        layout="@layout/content_book_reminder_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_reminder_option_date"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/book_reminder_radio_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_reminder_option_time"
        android:layout_marginBottom="5dp"
        android:text="@string/book_reminder_repeat"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_reminder_radio_title">

        <RadioButton
            android:id="@+id/book_reminder_once"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_reminder_once"/>

        <RadioButton
            android:id="@+id/book_reminder_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_reminder_daily"/>

        <RadioButton
            android:id="@+id/book_reminder_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_reminder_weekly"/>
    </RadioGroup>
</RelativeLayout>
